[tool.poetry]
name = "goit-pysoftware-hw-01"
version = "0.1.0"
description = ""
authors = ["Korotenko Alex <55750546+ToyEye@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
